--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
+        "propel/propel": "~2.0@beta",
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
@@ -25,7 +26,7 @@
         "symfony/intl": "6.1.*",
         "symfony/mailer": "6.1.*",
         "symfony/mime": "6.1.*",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/notifier": "6.1.*",
         "symfony/process": "6.1.*",
         "symfony/property-access": "6.1.*",
